# multi-reference-api

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  ruff.toml
app/: main.py  seed.py
app/api/v1/: buildings.py  dependencies.py  organizations.py  router.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  activity.py  building.py  organization.py  organization_activity.py  organization_phone.py
app/repositories/: activity.py  building.py  organization.py
app/schemas/: activity.py  building.py  common.py  organization.py
app/services/: activity.py  building.py  organization.py
migrations/: env.py
migrations/versions/: 20260202_000001_init.py
tests/: conftest.py  test_activity_service.py  test_api_integration.py  test_organization_service.py
